@@ -1,5 +1,13 @@
 2001-09-08  Scott S. Goodwin  <scott@scottg.net>
 
+	* Makefile: Turned off FOR_ACS_USE (I'll investigate what the
+	changes are and possibly integrate that code as the
+	default). Commented out lots and used the default include
+	$(NSHOME)/include/Makefile.module to handle the make and
+	installation process. The following now works:
+
+	make install POSTGRES=/your/path INST=/where/aolserver/is
+
 	* Makefile: changed to accept the
 	POSTGRES=/your/postgres/path. This is mandatory. Also changed to
 	expect NSHOME to be ../aolserver.
